displayed navbar on page

--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -1,1 +1,16 @@
-<h1>Welcome To Gallery</h1>
+{% extends 'base.html'%}
+
+{% block content%}
+<h1 class="jumbotron" style="text-align:center">Welcome To Gallery</h1>
+
+
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps');
+
+    .jumbotron{
+      font-family: 'Oleo Script Swash Caps', cursive;
+      background: url()
+
+    }
+</style>
+{% endblock %}
