--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,7 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar">
-  <a class="navbar-brand" href="#">Gallery</a>
+  <a class="navbar-brand" href="#" id="gallery">Gallery</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -17,20 +17,25 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Mombasa</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Paris</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="#">New York</a>
+        </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 
 <style>
-    @import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps');
+     @import url('https://fonts.googleapis.com/css?family=Nunito|Oleo+Script+Swash+Caps');
 
     .navbar{
-      font-family: 'Oleo Script Swash Caps', cursive;
+      font-family: 'Nunito', sans-serif;
       font-size: 20px;
 
+    }
+    #gallery{
+      font-size: 28px;
     }
 </style>
