--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -11,17 +11,16 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Nairobi</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Mombasa</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Paris</a>
-      </li>
-      <li class="nav-item">
-          <a class="nav-link" href="#">New York</a>
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Locations
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Nairobi</a>
+            <a class="dropdown-item" href="#">Mombasa</a>
+            <a class="dropdown-item" href="#">Paris</a>
+            <a class="dropdown-item" href="#">New York</a>
+          </div>
         </li>
     </ul>
   </div>
