--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -31,7 +31,10 @@
 
     .navbar{
       font-family: 'Nunito', sans-serif;
+      width: 100%;
       font-size: 20px;
+      position: fixed;
+      z-index: 1;
 
     }
     #gallery{
