--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,7 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar">
-  <a class="navbar-brand" href="#" id="gallery">Gallery</a>
+  <a class="navbar-brand" href="/" id="gallery">Gallery</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,17 +9,34 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Locations
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Nairobi</a>
-            <a class="dropdown-item" href="#">Mombasa</a>
-            <a class="dropdown-item" href="#">Paris</a>
-            <a class="dropdown-item" href="#">New York</a>
+            <a class="dropdown-item" href="/location/3">Nairobi</a>
+            <a class="dropdown-item" href="/location/4">Mombasa</a>
+            <a class="dropdown-item" href="/location/1">Paris</a>
+            <a class="dropdown-item" href="/location/2">New York</a>
+            <a class="dropdown-item" href="/location/7">Great Britain</a>
+            <a class="dropdown-item" href="/location/6">Spain</a>
+            <a class="dropdown-item" href="/location/5">America</a>
+            <a class="dropdown-item" href="/location/9">South America</a>
+            <a class="dropdown-item" href="/location/8">Australia</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Categories
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/category/1">Music</a>
+            <a class="dropdown-item" href="/category/2">Cities</a>
+            <a class="dropdown-item" href="/category/4">Sports</a>
+            <a class="dropdown-item" href="/category/5">Nature</a>
+            <a class="dropdown-item" href="/category/3">Technology</a>
           </div>
         </li>
     </ul>
