--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -7,6 +7,7 @@
      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="/static/photos/fav.jpg" type="image/x-icon">
 
   {% if title %}
   <title>Gallery - {{title}}</title>
@@ -34,4 +35,10 @@
      {% bootstrap_javascript %}
     {% endblock %}
 </body>
+<style>
+   body{
+    background: #d6d5d5;
+  }
+  
+</style>
 </html>
