--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -8,10 +8,10 @@
   <div class="contents">
     <div class="container image">
       <h2 id="title"><b>Welcome To Gallery</b></h2>
-      <form class="form" role="search" action="{% url 'search_results' %}">
+      <form class="form" role="search" action="{% url 'search_image' %}">
         
         <div class="input-group">
-          <input type="text" class="form-control" placeholder=" Search Image by category" name="image_category">&nbsp;&nbsp;   <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="button">Search</button>
+          <input type="text" class="form-control input" placeholder=" Search Image by category" name="image">&nbsp;&nbsp;   <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="button">Search</button>
           <br>
         </div>
         
@@ -20,16 +20,49 @@
   </div>
 </div>
 <body>
+  <br>
   <div class="container">
     <div class="row">
       {% for photo in photos %}
-      <div class="col-sm-4 images">
+      <div class="col-xs-12 col-sm-6 col-md-4 images">
         <div class="thumbnail">
-            <img src="{{photo.image.url}}" class = "img-responsive" alt="" style="height:400px;width: 350px;">
+          <img src="{{photo.image.url}}"  data-toggle="modal" data-target="#exampleModalCenter{{photo.id}}" class = "img-responsive imagee" alt="" style="height:400px;width: 360px;">
+          
+          
+          <!-- Modal -->
+          <div class="modal fade modal" id="exampleModalCenter{{photo.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content" style="font-family: 'Nunito', sans-serif;">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalCenterTitle" style="font-size:30px;"><b>{{photo.name}}</b></h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <img src="{{photo.image.url}}"  class = "img-responsive" alt="" style="height:400px;width: 465px;">
+                </div>
+                <div class="modal-body">
+                  <form action="">
+                    <input type="url" name="" id="" style="width:100%;height:40px;">
+                  </form>
+                  <br>
+      
+                  <p style="font-size:22px;padding-right: 70px;">{{photo.description}}</p>
+             
+
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-outline-success" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+        <br>
       </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
 </body>
 
@@ -46,11 +79,14 @@
     background-attachment:fixed;
     background-size:cover;
     background-position: center;
-    height: 400px;
+    height: 500px;
     
   }
   .searchh{
     color: whitesmoke;
+  }
+  .input{
+    height: 40px;
   }
   
   ::placeholder{
@@ -59,6 +95,9 @@
   }
   #button{
     font-family: 'Nunito', sans-serif;
+  }
+  .image{
+    padding-top: 70px;
   }
   
   #title{
@@ -83,6 +122,7 @@
   .contents{
     min-height: 450px;
     width: inherit;
+    padding-top: 70px;
   }
   .contents-1{
     min-height: inherit;
@@ -104,6 +144,20 @@
     margin: 5em auto 1em;
     width: 50%;
   }
+    .imagee{
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        transition: all 0.3s ease 0s;
+        cursor: pointer;
+        border-radius: 5px;
+      }
+    .imagee:hover{
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+      opacity: 0.7;
+      overflow: hidden;
+      transition: .5s ease;
+      transform: translateY(-7px);
+    }
+
   /* .paris{
     background: url(/static/photos/paris.jpeg);
     background-repeat: no-repeat;
