--- a/photos/templates/search.html
+++ b/photos/templates/search.html
@@ -37,9 +37,12 @@
                   <img src="{{image.image.url}}"  class = "img-responsive" alt="" style="height:400px;width: 465px;">
                 </div>
                 <div class="modal-body">
-                  <form action="">
-                    <input type="url" name="" id="" style="width:100%;height:40px;">
-                  </form>
+                    <form action="">
+                        <input type="text" value="https://imgsplash.herokuapp.com{{image.image.url}}" id="" style="width:100%;height:40px;">
+                        <br>
+                        <button type="button" class="btn btn-outline-success" style="float:right;"  value="https://imgsplash.herokuapp.com{{image.image.url}}" onclick="copyLink(this.value)"  >Copy Link</button>
+                      </form>
+                      <br>
                   <br>
                   <p style="font-size:22px;padding-right: 70px;">{{image.description}}</p>
                 </div>
@@ -53,6 +56,19 @@
             <br>
             <br>
           </div>
+          <script>
+              function copyLink(value) {
+                  console.log('copied link')
+                  function handler(event){
+                      event.clipboardData.setData('text/plain', value);
+                      event.preventDefault();
+                      document.removeEventListener('copy', handler, true);
+                  }
+                  document.addEventListener('copy', handler, true);
+                  document.execCommand('copy');
+              }
+      
+            </script>
         {% endfor %}
       {% endif %}
       </div>
