--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,16 +1,13 @@
 <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar">
-  <a class="navbar-brand" href="/" id="gallery">Gallery</a>
+  <a class="navbar-brand" href="/" id="gallery">ImageSplash</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Locations
@@ -55,6 +52,6 @@
 
     }
     #gallery{
-      font-size: 28px;
+      font-size: 30px;
     }
 </style>
