--- a/photos/templates/location.html
+++ b/photos/templates/location.html
@@ -57,6 +57,7 @@
             }
             document.addEventListener('copy', handler, true);
             document.execCommand('copy');
+            alert("Image link has been successfully copied: " + copyText.value);
         }
 
       </script>
