--- a/photos/templates/search.html
+++ b/photos/templates/search.html
@@ -66,6 +66,7 @@
                   }
                   document.addEventListener('copy', handler, true);
                   document.execCommand('copy');
+                  alert("Image link has been successfully copied: " + copyText.value);
               }
       
             </script>
