--- a/photos/templates/location.html
+++ b/photos/templates/location.html
@@ -57,7 +57,7 @@
             }
             document.addEventListener('copy', handler, true);
             document.execCommand('copy');
-            alert("Image link has been successfully copied: " + copyText.value);
+            alert("Image link has been successfully copied: ");
         }
 
       </script>
