--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,18 +1,18 @@
 <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar">
-  <a class="navbar-brand" href="/" id="gallery">ImageSplash</a>
+  <a class="navbar-brand" href="/" id="gallery"><img src="/static/photos/logo.png" class = "img-responsive" style="width:50px;height: 50px;">&nbsp;ImageSplash</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Locations
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
             <a class="dropdown-item" href="/location/3">Nairobi</a>
             <a class="dropdown-item" href="/location/4">Mombasa</a>
             <a class="dropdown-item" href="/location/1">Paris</a>
@@ -22,18 +22,20 @@
             <a class="dropdown-item" href="/location/5">America</a>
             <a class="dropdown-item" href="/location/9">South America</a>
             <a class="dropdown-item" href="/location/8">Australia</a>
+            <a class="dropdown-item" href="/location/10">Africa</a>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Categories
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
             <a class="dropdown-item" href="/category/1">Music</a>
             <a class="dropdown-item" href="/category/2">Cities</a>
             <a class="dropdown-item" href="/category/4">Sports</a>
             <a class="dropdown-item" href="/category/5">Nature</a>
             <a class="dropdown-item" href="/category/3">Technology</a>
+            <a class="dropdown-item" href="/category/6">Food</a>
           </div>
         </li>
     </ul>
@@ -53,5 +55,8 @@
     }
     #gallery{
       font-size: 30px;
+    }
+    .dropdown-item{
+      color: whitesmoke;
     }
 </style>
