--- a/photos/templates/search.html
+++ b/photos/templates/search.html
@@ -10,7 +10,7 @@
     {% if images %}
       <h2><b>Found {{ images|length }} results of searched category {{message}}</b></h2>
     {% else %}
-      <h2> <b>Found 0 images for the search category {{message}}</b></h2>
+      <h2> <b>Found 0 images for the searched category {{message}}</b></h2>
     {% endif %}
 
   </div>
