--- a/photos/templates/category.html
+++ b/photos/templates/category.html
@@ -15,7 +15,7 @@
         <!-- Modal -->
         <div class="modal fade modal" id="exampleModalCenter{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content" style="font-family: 'Nunito', sans-serif;">
+            <div class="modal-content" style="font-family: 'Nunito', sans-serif;background: rgb(29, 29, 29);color:whitesmoke;">>
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalCenterTitle" style="font-size:30px;"><b>{{image.name}}</b></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
