--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar">
@@ -10,7 +11,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Locations
+            Locations&nbsp;<i class="fas fa-map-marker-alt"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
             <a class="dropdown-item" href="/location/3">Nairobi</a>
@@ -22,6 +23,7 @@
             <a class="dropdown-item" href="/location/5">America</a>
             <a class="dropdown-item" href="/location/9">South America</a>
             <a class="dropdown-item" href="/location/8">Australia</a>
+            <a class="dropdown-item" href="/location/10">Africa</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -34,6 +36,7 @@
             <a class="dropdown-item" href="/category/4">Sports</a>
             <a class="dropdown-item" href="/category/5">Nature</a>
             <a class="dropdown-item" href="/category/3">Technology</a>
+            <a class="dropdown-item" href="/category/6">Food</a>
           </div>
         </li>
     </ul>
